# vcpkg_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  run.sh  vcpkg-configuration.json
src/: main.cpp
